--- a/app/globals.css
+++ b/app/globals.css
@@ -29,12 +29,12 @@ a {
   - personalization -
  ////////////////// */
 
-.dark-bg{
+/* .dark-bg{
   background: linear-gradient(rgb(0, 0, 0),rgb(10, 6, 35));
   background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(/img/hero_bg.jpg);
   background-position: center;
   background-size: cover;
-}
+} */
 
 
 
