--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
   color: rgb(49, 49, 49);
-  background-color: whitesmoke;
+  background-color: rgb(248, 249, 250);
 }
 
 body {
