--- a/app/globals.css
+++ b/app/globals.css
@@ -20,8 +20,11 @@ body {
 }
 
 a {
-  color: inherit;
+  color:inherit;
   text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 
